[Progress] Category system

--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -1,4 +1,4 @@
 :root {
-    --background-color: grey;
-    --surface-color: rgb(255, 255, 255);
+    --background-color: rgb(236, 236, 236);
+    --surface-color: rgb(244, 244, 244);
 }
