--- a/frontend/src/app/categories/categories.component/categories.component.css
+++ b/frontend/src/app/categories/categories.component/categories.component.css
@@ -1,5 +1,15 @@
-#categories-add-category-card {
-    width: 140px;
+#categories-add-category-card ::ng-deep .p-inplace {
+    height: 100%;
+}
+
+#categories-add-category-card ::ng-deep .p-inplace-display {
+    padding: 0;
+
+    border: none;
+}
+
+#categories-add-category-card .p-card {
+    width: 160px;
     height: 74px;
     border-radius: 12px;
     cursor: pointer;
@@ -7,8 +17,42 @@
 
 #categories-add-category-card ::ng-deep .p-card-body {
     height: 100%;
+    padding: 0;
     
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#categories-add-category-card ::ng-deep .p-card-content {
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#categories-add-category-card input {
+    all: unset;
+    width: 100%;
+    height: 100%;
+}
+
+#categories-add-category-card form {
+    padding-left: 12px;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#categories-add-category-card form ::ng-deep p-button,
+#categories-add-category-card form ::ng-deep .p-button {
+    height: 100%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
 }
