--- a/frontend/src/app/categories/category.component/category.component.css
+++ b/frontend/src/app/categories/category.component/category.component.css
@@ -23,6 +23,7 @@
     min-height: 100%;
 
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 
@@ -46,4 +47,10 @@
     border-top-right-radius: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 12px;
+}
+
+#category-container form input {
+    all: unset;
+    width: 100%;
+    height: 100%;
 }
