--- a/frontend/src/app/shared/pages/home.page/home.page.html
+++ b/frontend/src/app/shared/pages/home.page/home.page.html
@@ -1,5 +1,5 @@
 <div id="home-page">
     <app-categories-component />
     <app-transactions-table />
-    <app-transaction-add-bar />
+    <app-transaction-add-bar [year]="2026" [type]="'EXPENSE'" />
 </div>
