--- a/frontend/src/app/transactions/trans-table.component/trans-table.component.html
+++ b/frontend/src/app/transactions/trans-table.component/trans-table.component.html
@@ -1,33 +1,76 @@
 <div id="transactions-table-container">
     @let ts = transactions();
-    @if (ts) {  
-        <p-table [value]="ts">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Date</th>
-                    <th>Motif</th>
-                    <th>Destinataire</th>
-                    <th>Date en banque</th>
-                    <th>Catégorie 1</th>
-                    <th>Catégorie 2</th>
-                    <th>Catégorie 3</th>
-                    <th>Type</th>
-                    <th>Montant</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-transaction>
-                <tr>
-                    <td>{{ transaction.event_date }}</td>
-                    <td>{{ transaction.motive }}</td>
-                    <td>{{ transaction.to }}</td>
-                    <td>{{ transaction.bank_date }}</td>
-                    <td>{{ transaction.category1_id }}</td>
-                    <td>{{ transaction.category2_id }}</td>
-                    <td>{{ transaction.category3_id }}</td>
-                    <td>{{ transaction.type }}</td>
-                    <td>{{ transaction.amount }} €</td>
-                </tr>
-            </ng-template>
-        </p-table>
+    @if (ts) {
+        <form [formGroup]="editTransactionForm">
+            <p-table [value]="ts">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Date</th>
+                        <th>Motif</th>
+                        <th>Destinataire</th>
+                        <th>Date en banque</th>
+                        <th>Catégorie 1</th>
+                        <th>Catégorie 2</th>
+                        <th>Catégorie 3</th>
+                        <th>Type</th>
+                        <th>Montant</th>
+                        <th>Actions</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-transaction>
+                    <tr>
+                        @if (state() === 'view') {
+                            <td>{{ transaction.event_date }}</td>
+                            <td>{{ transaction.motive }}</td>
+                            <td>{{ transaction.to }}</td>
+                            <td>{{ transaction.bank_date }}</td>
+                            <td>{{ transaction.category1_id | idToName: categoriesMap() }}</td>
+                            <td>{{ transaction.category2_id | idToName: categoriesMap() }}</td>
+                            <td>{{ transaction.category3_id | idToName: categoriesMap() }}</td>
+                            <td>{{ transaction.type }}</td>
+                            <td>{{ transaction.amount }} €</td>
+                            <td>
+                                <button pButton type="submit" icon="pi pi-pencil" (click)="state.set('view')"></button>
+                                <button pButton type="button" icon="pi pi-trash" (click)="state.set('delete')"></button>
+                            </td>
+                        } @else if (state() === 'edit') {
+                            <td>
+                                <input type="text" formControlName="event_date" [value]="transaction.event_date" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="motive" [value]="transaction.motive" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="to" [value]="transaction.to" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="bank_date" [value]="transaction.bank_date" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="category1_id" [value]="transaction.category1_id" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="category2_id" [value]="transaction.category2_id" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="category3_id" [value]="transaction.category3_id" />
+                            </td>
+                            <td>
+                                <input type="text" formControlName="amount" [value]="transaction.amount" />
+                            </td>
+                            <td>
+                                <button pButton type="submit" icon="pi pi-save" (click)="state.set('view')"></button>
+                                <button pButton type="button" icon="pi pi-cancel" (click)="state.set('view')"></button>
+                            </td>
+                        } @else if (state() === 'delete') {
+                            <td>
+                                <button pButton type="submit" icon="pi pi-trash" (click)="state.set('view')"></button>
+                                <button pButton type="button" icon="pi pi-cancel" (click)="state.set('view')"></button>
+                            </td>
+                        }
+                    </tr>
+                </ng-template>
+            </p-table>
+        </form>
     }
 </div>
