--- a/frontend/src/app/transactions/trans-table.component/trans-table.component.html
+++ b/frontend/src/app/transactions/trans-table.component/trans-table.component.html
@@ -7,15 +7,15 @@
             <p-table [value]="ts">
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>Date</th>
-                        <th>Motif</th>
-                        <th>Destinataire</th>
-                        <th>Date en banque</th>
-                        <th>Catégorie 1</th>
-                        <th>Catégorie 2</th>
-                        <th>Catégorie 3</th>
-                        <th>Montant</th>
-                        <th>Actions</th>
+                        <th id="event_date">Date</th>
+                        <th id="motive">Motif</th>
+                        <th id="to">Destinataire</th>
+                        <th id="bank_date">Date en banque</th>
+                        <th id="category1_id">Catégorie 1</th>
+                        <th id="category2_id">Catégorie 2</th>
+                        <th id="category3_id">Catégorie 3</th>
+                        <th id="amount">Montant</th>
+                        <th id="actions">Actions</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-transaction let-i="rowIndex">
@@ -102,7 +102,7 @@
                                 <select formControlName="category2_id">
                                     <option [value]="null">Autre</option>
                                     @for (item of categoriesMap() | keyvalue; track item.key) {
-                                        @if (item.value.level == 2) {
+                                        @if (item.value.level == 1) {
                                             <option [value]="item.key">{{ item.value.name }}</option>
                                         }
                                     }
@@ -112,7 +112,7 @@
                                 <select formControlName="category3_id">
                                     <option [value]="null">Autre</option>
                                     @for (item of categoriesMap() | keyvalue; track item.key) {
-                                        @if (item.value.level == 3) {
+                                        @if (item.value.level == 2) {
                                             <option [value]="item.key">{{ item.value.name }}</option>
                                         }
                                     }
