[Front][Tested-] Type and year select

--- a/frontend/src/app/shared/pages/home.page/home.page.html
+++ b/frontend/src/app/shared/pages/home.page/home.page.html
@@ -2,4 +2,5 @@
     <app-categories-component />
     <app-transactions-table />
     <app-transaction-add-bar [year]="2026" [type]="'EXPENSE'" />
+    <app-options />
 </div>
