[Front][Progress] Detailed tab ok but missing the other category

--- a/frontend/src/app/shared/pages/home.page/home.page.html
+++ b/frontend/src/app/shared/pages/home.page/home.page.html
@@ -3,4 +3,5 @@
     <app-transactions-table />
     <app-transaction-add-bar [year]="2026" [type]="'EXPENSE'" />
     <app-options />
+    <app-details-tab />
 </div>
