[Tests] Fixed the year for the transactions as it was left appart

--- a/frontend/src/app/shared/pages/home.page/home.page.html
+++ b/frontend/src/app/shared/pages/home.page/home.page.html
@@ -4,4 +4,6 @@
     <app-transaction-add-bar [year]="optionsService.year()" [type]="optionsService.types()" />
     <app-options />
     <app-details-tab [tab_type]="'revenues'" />
+    <app-details-tab [tab_type]="'expenses'" />
+    <app-details-tab [tab_type]="'differences'" />
 </div>
