--- a/frontend/src/app/shared/components/options/options.html
+++ b/frontend/src/app/shared/components/options/options.html
@@ -1,12 +1,13 @@
 <div id="options-container">
     <p-listbox
         [options]="optionsService.typeValues"
-        (onChange)="optionsService.types.set($event.value)"
+        (onChange)="optionsService.types.set($event.value); detailsService.refresh();"
         [ngModel]="optionsService.types()"
     />
     
     <p-listbox
         [options]="YEARS"
         [(ngModel)]="optionsService.year"
+        (onChange)="detailsService.refresh();"
     />
 </div>
