--- a/frontend/src/app/shared/pages/details.page/details.page.html
+++ b/frontend/src/app/shared/pages/details.page/details.page.html
@@ -1,4 +1,6 @@
 <div id="details-page-container">
+    <app-menu-bar />
+    <app-menu-col />
     <app-options />
     <app-details-tab [tab_type]="'revenues'" />
     <app-details-tab [tab_type]="'expenses'" />
