--- a/frontend/src/app/shared/pages/home.page/home.page.html
+++ b/frontend/src/app/shared/pages/home.page/home.page.html
@@ -1,4 +1,6 @@
 <div id="home-page">
+    <app-menu-bar />
+    <app-menu-col />
     <app-categories-component />
     <app-transactions-table />
     <app-transaction-add-bar [year]="optionsService.year()" [type]="optionsService.types()" />
