[Both][Teested-] Balance for the front + fixed the usre login withe balance tests

--- a/frontend/src/app/shared/components/options/options.html
+++ b/frontend/src/app/shared/components/options/options.html
@@ -3,6 +3,7 @@
         <p-listbox
             [options]="optionsService.typeValues"
             [(ngModel)]="optionsService.multipleTypes"
+            (onChange)="summaryService.refresh();"
             [multiple]="multiple()"
             [checkbox]="multiple()"
         />
