--- a/frontend/src/app/shared/pages/summary.page/summary.page.html
+++ b/frontend/src/app/shared/pages/summary.page/summary.page.html
@@ -1,6 +1,5 @@
 <div id="summary-page-container">
-    <app-menu-bar />
+    <app-menu-bar [multipleOptions]="true" />
     <app-menu-col />
-    <app-options [multiple]="true" />
     <app-balance />
 </div>
